--- a/projetoAcademia/FormPesquisa.resx
+++ b/projetoAcademia/FormPesquisa.resx
@@ -159,6 +159,9 @@
         2D9OneZMdMcUZ2KL6XYnViZHEGdrEjMHCeYYX/4NGvwHZtaMuJHNRc0AAAAASUVORK5CYII=
 </value>
   </data>
+  <metadata name="bsSearch.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
   <metadata name="$this.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
